--- a/homework01/index.html
+++ b/homework01/index.html
@@ -9,6 +9,10 @@
 
 <body>
     <h1>Шпаргалка по GIT!</h1>
+    <ul>
+        <li>git config --global user.name blabla - команда яка добавляє в глобальний конфіг користувача з імям blabla
+        </li>
+    </ul>
 </body>
 
 </html>
