--- a/homework01/index.html
+++ b/homework01/index.html
@@ -12,6 +12,28 @@
     <ul>
         <li>git config --global user.name blabla - команда яка добавляє в глобальний конфіг користувача з імям blabla
         </li>
+        <li>git config --global user.email blabal@bla - команда яка добавляє в глобальний конфіг користувача з email
+            blabal@bla</li>
+        <li>git init - команда яка встановлює git в поточну директорію</li>
+        <li>git status - показує статус роботи git</li>
+        <li>git add - добавляє файл або всі файли в staged</li>
+        <li>git commit - файли з staged фіксує в локальний репозиторій, в лапках вказується короткий опис змін</li>
+        <li>git log - історія версій поточної гілки </li>
+        <li>git checkout - використовується для переключення гілок</li>
+        <li>git branch - команда для керування гілками</li>
+        <li>git push - надсилання змін до відділеного репозиторію</li>
+        <li>git pull - отримання змін з відділеного репозиторію</li>
+        <li>git merge - зливання однієї чи більше гілок до пточної</li>
+        <li>git clone - копія GIT репозиторію </li>
+        <li>файл .gitignore - файл містить список файлів які будуть ігноруватись git'ом</li>
+    </ul>
+    <h2>Advanced</h2>
+    <ul>
+        <li>git revert - скасовує комміт</li>
+        <li>git reset - </li>
+        <li>git rebase</li>
+        <li>git cherry-pick</li>
+        <li>git stash</li>
     </ul>
 </body>
 
