--- a/homework01/index.html
+++ b/homework01/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">
         <div class="head_img">
-            <img class="image" width="720px" height="340px" src="homework01/img/git.png" alt="git">
+            <img class="image" width="720px" height="340px" src="./homework01/img/git.png" alt="git">
         </div>
         <h1 class="head">Шпаргалка по GIT!</h1>
         <ul class="list">
