--- a/homework02/index.html
+++ b/homework02/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="wrapper">
-        <h1> <a href="https://uk.wikipedia.org/wiki/M1_Abrams" target="_blank">M1 Abrams</a></h1>
+        <h1> <a href="https://uk.wikipedia.org/wiki/M1_Abrams" target="_blank" title="Wiki">M1 Abrams</a></h1>
         <img src="../homework02/img/M1A2.jpg" width="40%" alt="M1A2 Abrams"><br> <i>Матеріал з Вікіпедії — вільної
             енциклопедії.</i>
         <p> <b>M1 «А́брамс» </b>(англ. M1 Abrams) — основний бойовий танк третього покоління виробництва Сполучених
