--- a/homework03/index.html
+++ b/homework03/index.html
@@ -48,7 +48,7 @@
                     <h3>🍪 Cookie Notice</h3>
                     <p>We use cookies to learn how you interact with our content, and show you relevant content and ads
                         based on your browsing history. You can adjust your settings below. Here’s our <a
-                            href="#">policy</a> </p>
+                            style="color: white;" href="#">policy</a></p>
                 </div>
 
                 <div class="manage">
@@ -67,6 +67,23 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="container">
+            <div class="seventh_cookies">
+                <div class="text_container">
+                    <h3>Cookies</h3>
+                    <p>We use cookies to ensure that we give you the best experience on our website.</p>
+                </div>
+                <button type="button">Accept</button>
+            </div>
+            <div class="nineth_cookies">
+                <p>We care about your data, and we'd love to use cookies to make your experience better.</p>
+                <div class="button_container">
+                    <a href="#">Privacy Policy</a>
+                    <button type="button">Accept</button>
+                </div>
+            </div>
+
         </div>
     </div>
 </body>
