--- a/homework02/index.html
+++ b/homework02/index.html
@@ -62,6 +62,37 @@
             звичайної композитної броні проти кумулятивних боєприпасів та 940—960 мм проти бронебійних підкаліберних
             снарядів[3].
         </p>
+        <h2>Варіанти та модифікації</h2>
+        <ul>
+            <li>XM1: експериментальна модель. 9 зразків вироблено у 1978.</li>
+            <li>M1: Перший прийнятий на озброєння варіант. Виробництво розпочалося у 1979 та тривало до 1985 (3 273
+                танків створено для США);</li>
+            <li>
+                M1A1: Виробництво розпочалося у 1985 та тривало до 1992. (4 976 екземплярів створено для армії США, 221
+                для КМП, 755 для Єгипту, 59 M1A1 AIM SA продано до Австралії).
+                <ul>
+                    <li>M1A1HA «посилена броня» (англ. Heavy Armor): Встановлена перша версія броні зі збідненим ураном.
+                    </li>
+                    <li>M1A1HC «посилене обладнання» (англ. Heavy Common): обладнання другої версії броні зі збідненим
+                        ураном.</li>
+                    <li>M1A1D «цифровий» (англ. Digital): удосконалена система бойового управління M1A1HC, до рівня
+                        M1A2SEP, вироблено для 2 танкових батальйонів.</li>
+                    <li>M1A1AIM v.1 «інтегроване управління Абрамсу» (англ. Abrams Integrated Management): модернізація
+                        раніше побудованих танків. Тепловізор другого покоління для навідника, безпечний для очей
+                        лазерний далекомір, тепловізійний прилад спостереження для механіка-водія, система управління
+                        військами FBCB2, телефон для зв'язку з піхотою.</li>
+                </ul>
+            <li>М1А2 (основний): Виробництво розпочалося у 1992 (77 побудовано для США та більш ніж 600 M1 удосконалено
+                до рівня M1A2, 315 для Саудівської Аравії, 218 для Кувейту). Автономний тепловізійний панорамний приціл
+                командира, новий приціл навідника із стабілізацією в двох площинах і безпечним для очей далекоміром,
+                нова командирська башточка з 8 перископами (замість 6), тепловізійний прилад спостереження для
+                механіка-водія, бойова система IVIS, з інформаційним-керуванням. Посилене бронювання. Боєкомплект 42
+                постріли до гармати.</li>
+            <li>M1A2 SEP (англ. System Enhancement Package) — кілька поколінь модернізації (SEP v2, SEP v3, SEP v4).
+            </li>
+            <li>M1A2K — спеціальна модифікація для армії Кувейту</li>
+            </li>
+        </ul>
     </div>
 </body>
 
