--- a/homework03/index.html
+++ b/homework03/index.html
@@ -22,15 +22,15 @@
             <button>Accept All Cookies</button>
         </div>
         <div class="second_cookies">
-            <img id="info" src="/homework03/img/info.png" alt="info">
+            <img id="info" src="../homework03/img/info.png" alt="info">
             <p>We use cookies to enhance your user experience. By continuing to visit this site you agree to <a
                     href="#">our use of
                     cookies.</a></p>
-            <img id="close" src="/homework03/img/close.png" alt="close">
+            <img id="close" src="../homework03/img/close.png" alt="close">
         </div>
         <div class="third_cookies">
             <div class="cookie">
-                <img src="/homework03/img/cookie.svg" alt="cookie">
+                <img src="../homework03/img/cookie.svg" alt="cookie">
             </div>
             <p>We use cookies to ensure that we give you the best experience on our website. <a href="#">Read cookies
                     policies.</a></p>
