--- a/homework04/index.html
+++ b/homework04/index.html
@@ -18,13 +18,16 @@
                         spending habits so you can easily spot and cut any unnecessary expenses. Simply join today to
                         get started!</p>
                     <div class="icons_container">
-                        <a href="#"><img src="../homework04/img/ion-logo-apple-appstore.svg" alt="Apple"></a>
                         <a href="#"><img src="../homework04/img/ion-logo-google-playstore.svg" alt="google"></a>
+                        <a href="#"><img src="../homework04/img/ion-logo-apple-appstore.svg" alt="Apple"></a>
                         <a href=""><img src="../homework04/img/simple-icons_windows.svg" alt="windows"></a>
                     </div>
                 </div>
                 <div class="headerimg_container">
-                    <img src="../homework04/img/Video_bg.png" alt="Image" width="445px" height="311px">
+                    <img class="img_bg1" src="../homework04/img/Video_bg1.png" alt="background">
+                    <img class="main_image" src="../homework04/img/Video_bg.png" alt="Image" width="445px"
+                        height="311px">
+                    <img class="img_bg2" src="../homework04/img/Video_bg2.png" alt="bg2">
                 </div>
             </div>
         </header>
