--- a/homework04/index.html
+++ b/homework04/index.html
@@ -34,7 +34,7 @@
         <main class="main">
             <div class="main_container">
                 <div class="contact">
-                    <h1>Contact</h1>
+                    <h2>Contact</h2>
                     <p>Questions or concerns? Just fill out the form below and our support team will get back to you
                         within 24 hours</p>
                 </div>
@@ -56,13 +56,13 @@
         </main>
         <footer class="footer">
             <div class="footer_container">
-                <div class="adress">
+                <div class="adress column">
                     <h3>Address</h3>
                     <p>Pipang Ltd, Griva Digeni,
                         81-83 Jacovides Tower, 1st Floor
                         1090 Picosia USA</p>
                 </div>
-                <div class="services">
+                <div class="services column">
                     <h3>Services</h3>
                     <p>overview
                         features
@@ -71,7 +71,7 @@
                         Privecy
                     </p>
                 </div>
-                <div class="touch">
+                <div class="touch column">
                     <h3>Get in Touch</h3>
                     <a href="mailto:info@cloudbudget.com">info@cloudbudget.com</a><br>
                     <a href="tel:+1 844-721-7120">+1 844-721-7120</a>
@@ -81,11 +81,12 @@
                         <a href="#"><img src="../homework04/img/twitter.svg" alt="twitter"></a>
                     </div>
                 </div>
-                <div class="support">
+                <div class="support column">
                     <h3>We Support</h3>
                     <img src="../homework04/img/secure-p-1 1.png" alt="visa">
                 </div>
             </div>
+            <div class="float"></div>
             <div class="copyright">Copyright 2018 CloudBudget</div>
         </footer>
     </div>
