--- a/homework04/index.html
+++ b/homework04/index.html
@@ -64,12 +64,15 @@
                 </div>
                 <div class="services column">
                     <h3>Services</h3>
-                    <p>overview
-                        features
-                        technology
-                        Terms & Conditions
-                        Privecy
-                    </p>
+                    <ul>
+                        <li> overview</li>
+                        <li>features</li>
+                        <li>technology</li>
+                        <li>Terms & Conditions</li>
+                        <li>Privecy</li>
+                    </ul>
+
+
                 </div>
                 <div class="touch column">
                     <h3>Get in Touch</h3>
