--- a/homework04/index.html
+++ b/homework04/index.html
@@ -4,94 +4,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Блочна верстка</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="wrapper">
-        <header class="header">
-            <div class="header_container">
-                <div class="text_container">
-                    <h1>Stay focused on saving money</h1>
-                    <p>It is important to stay focused on saving money in any way you can. We help you monitor your
-                        spending habits so you can easily spot and cut any unnecessary expenses. Simply join today to
-                        get started!</p>
-                    <div class="icons_container">
-                        <a href="#"><img src="../homework04/img/ion-logo-google-playstore.svg" alt="google"></a>
-                        <a href="#"><img src="../homework04/img/ion-logo-apple-appstore.svg" alt="Apple"></a>
-                        <a href=""><img src="../homework04/img/simple-icons_windows.svg" alt="windows"></a>
-                    </div>
-                </div>
-                <div class="headerimg_container">
-                    <img class="img_bg1" src="../homework04/img/Video_bg1.png" alt="background">
-                    <img class="main_image" src="../homework04/img/Video_bg.png" alt="Image" width="445px"
-                        height="311px">
-                    <img class="img_bg2" src="../homework04/img/Video_bg2.png" alt="bg2">
+    <header class="header">
+        <div class="container">
+            <div class="text_container">
+                <h1>Stay focused on saving money</h1>
+                <p>It is important to stay focused on saving money in any way you can. We help you monitor your
+                    spending habits so you can easily spot and cut any unnecessary expenses. Simply join today to
+                    get started!</p>
+                <div class="icons_container">
+                    <a href="#"><img src="../homework04/img/ion-logo-google-playstore.svg" alt="google"></a>
+                    <a href="#"><img src="../homework04/img/ion-logo-apple-appstore.svg" alt="Apple"></a>
+                    <a href=""><img src="../homework04/img/simple-icons_windows.svg" alt="windows"></a>
                 </div>
             </div>
-        </header>
-        <main class="main">
-            <div class="main_container">
+            <div class="headerimg_container">
+                <img class="img_bg1" src="../homework04/img/Video_bg1.png" alt="background">
+                <img class="main_image" src="../homework04/img/Video_bg.png" alt="Image" width="445px" height="311px">
+                <img class="img_bg2" src="../homework04/img/Video_bg2.png" alt="bg2">
+            </div>
+        </div>
+
+
+    </header>
+
+
+    <main class="main">
+
+        <section class="abuot">
+            <div class="container">
                 <div class="contact">
                     <h2>Contact</h2>
                     <p>Questions or concerns? Just fill out the form below and our support team will get back to you
-                        within 24 hours</p>
+                        within
+                        24 hours</p>
                 </div>
-                <div class="main_form">
-                    <form action="#">
-                        <input class="first" type="text" placeholder="First Name">
-                        <input class="last" type="text" placeholder="Last Name"> <br>
-                        <input class="phone" type="tel" placeholder="Phone number"><br>
-                        <select name="service" class="select">
-                            <option value="" disabled selected hidden>Select service</option>
-                            <option value="service1">Srvice1</option>
-                            <option value="service2">Srvice2</option>
-                        </select><br>
-                        <input class="button" type="button" value="Submit Now">
-                    </form>
 
+                <form class="form" action="#">
+                    <input class="first" type="text" placeholder="First Name">
+                    <input class="last" type="text" placeholder="Last Name"> <br>
+                    <input class="phone" type="tel" placeholder="Phone number"><br>
+                    <select name="service" class="select">
+                        <option value="" disabled selected hidden>Select service</option>
+                        <option value="service1">Srvice1</option>
+                        <option value="service2">Srvice2</option>
+                    </select><br>
+                    <input class="button" type="button" value="Submit Now">
+                </form>
+            </div>
+        </section>
+
+        <section class="expertise">
+
+        </section>
+
+    </main>
+
+
+    <fotter class="footer">
+        <div class="container">
+            <div class="adress column">
+                <h3>Address</h3>
+                <p>Pipang Ltd, Griva Digeni,
+                    81-83 Jacovides Tower, 1st Floor
+                    1090 Picosia USA</p>
+            </div>
+            <div class="services column">
+                <h3>Services</h3>
+                <ul>
+                    <li> overview</li>
+                    <li>features</li>
+                    <li>technology</li>
+                    <li>Terms & Conditions</li>
+                    <li>Privecy</li>
+                </ul>
+
+
+            </div>
+            <div class="touch column">
+                <h3>Get in Touch</h3>
+                <a href="mailto:info@cloudbudget.com">info@cloudbudget.com</a><br>
+                <a href="tel:+1 844-721-7120">+1 844-721-7120</a>
+                <div class="social_container">
+                    <a href="#"><img src="../homework04/img/facebook.svg" alt="facebook"></a>
+                    <a href="#"><img src="../homework04/img/linkedin.svg" alt="linkedin"></a>
+                    <a href="#"><img src="../homework04/img/twitter.svg" alt="twitter"></a>
                 </div>
             </div>
-        </main>
-        <footer class="footer">
-            <div class="footer_container">
-                <div class="adress column">
-                    <h3>Address</h3>
-                    <p>Pipang Ltd, Griva Digeni,
-                        81-83 Jacovides Tower, 1st Floor
-                        1090 Picosia USA</p>
-                </div>
-                <div class="services column">
-                    <h3>Services</h3>
-                    <ul>
-                        <li> overview</li>
-                        <li>features</li>
-                        <li>technology</li>
-                        <li>Terms & Conditions</li>
-                        <li>Privecy</li>
-                    </ul>
-
-
-                </div>
-                <div class="touch column">
-                    <h3>Get in Touch</h3>
-                    <a href="mailto:info@cloudbudget.com">info@cloudbudget.com</a><br>
-                    <a href="tel:+1 844-721-7120">+1 844-721-7120</a>
-                    <div class="social_container">
-                        <a href="#"><img src="../homework04/img/facebook.svg" alt="facebook"></a>
-                        <a href="#"><img src="../homework04/img/linkedin.svg" alt="linkedin"></a>
-                        <a href="#"><img src="../homework04/img/twitter.svg" alt="twitter"></a>
-                    </div>
-                </div>
-                <div class="support column">
-                    <h3>We Support</h3>
-                    <img src="../homework04/img/secure-p-1 1.png" alt="visa">
-                </div>
+            <div class="support column">
+                <h3>We Support</h3>
+                <img src="../homework04/img/secure-p-1 1.png" alt="visa">
             </div>
-            <div class="copyright">Copyright 2018 CloudBudget</div>
-        </footer>
-    </div>
+            <div class="copyright">Copyright 2018 CloudBudget
+            </div>
+
+    </fotter>
 </body>
 
 </html>
