--- a/homework06/index.html
+++ b/homework06/index.html
@@ -37,7 +37,21 @@
             </div>
         </header>
         <main class="main">
-            <div class="container">2</div>
+            <div class="container">
+                <section class="storage">
+                    <img src="../homework06/img/image2.png" alt="Image2">
+                    <div class="storage_text">
+                        <h2>We are a high-level
+                            data
+                            storage bank</h2>
+                        <p>The place to store various data that you can access at any time through the internet and
+                            where you can carry it.
+                            This very flexible storage area has a high level of security. To enter into your own data
+                            you must enter the password that you created when you registered in this Data Warehouse.
+                        </p>
+                    </div>
+                </section>
+            </div>
         </main>
         <footer class="footer">
             <div class="container">3</div>
