--- a/homework06/index.html
+++ b/homework06/index.html
@@ -51,6 +51,52 @@
                         </p>
                     </div>
                 </section>
+                <section class="features">
+                    <h2>Features</h2>
+                    <div class="text_features">Some of the features and advantages that we provide for those of you who
+                        store data in this Data
+                        Warehouse.</div>
+                    <div class="rows">
+                        <div class="search features_rows">
+                            <img src="../homework06/img/image3 1.png" alt="img3">
+                            <div class="text_row">
+                                <h3>Search Data</h3>
+                                <p>Don’t worry if your data is very large, the Data Warehoue provides a search engine,
+                                    which is useful for making it easier to find data effectively saving time.</p>
+                                <a href="#">Learn more <img src="../homework06/img/arrowr.svg" alt="arrow"></a>
+                            </div>
+                        </div>
+                        <div class="hours features_rows">
+                            <img src="../homework06/img/image4.png" alt="img4">
+                            <div class="text_row">
+                                <h3>24 Hours Access</h3>
+                                <p>Access is given 24 hours a full morning to night and
+                                    meet again in the morning, giving you comfort when
+                                    you need data when urgent.</p>
+                                <a href="#">Learn more <img src="../homework06/img/arrowr.svg" alt="arrow"></a>
+                            </div>
+                        </div>
+                        <div class="print features_rows">
+                            <img src="../homework06/img/image5 1.png" alt="img5">
+                            <div class="text_row">
+                                <h3>Print Out</h3>
+                                <p>Print out service gives you convenience if someday
+                                    you need print data, just edit it all and just print it.</p>
+                                <a href="#">Learn more <img src="../homework06/img/arrowr.svg" alt="arrow"></a>
+                            </div>
+                        </div>
+                        <div class="security features_rows">
+                            <img src="../homework06/img/image6 1.png" alt="img6">
+                            <div class="text_row">
+                                <h3>Security Code</h3>
+                                <p>Data Security is one of our best facilities. Allows for your files
+                                    to be safer. The file can be secured with a code or password that
+                                    you created, so only you can open the file.</p>
+                                <a href="#">Learn more <img src="../homework06/img/arrowr.svg" alt="arrow"></a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </main>
         <footer class="footer">
