--- a/homework06/index.html
+++ b/homework06/index.html
@@ -105,6 +105,25 @@
                         </div>
                     </div>
                 </section>
+                <section class="testimonials">
+                    <h3>Testimonials</h3>
+                    <div class="fang">
+                        <img src="../homework06/img/Ellipse 76.png" alt="photo">
+                        <div class="text_testimols">
+                            <h4>John Fang </h4>
+                            <a href="wordfaang.com">wordfaang.com</a>
+                            <p>Suspendisse ultrices at diam lectus nullam.
+                                Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar aenean nam
+                                laoreet nulla.</p>
+                        </div>
+
+                    </div>
+                    <div class="controls">
+                        <img src="../homework06/img/slide.svg" alt="slide">
+                        <img class="arrow_control" src="../homework06/img/arrowl.svg" alt="arrowl">
+                        <img src="../homework06/img/arrowr2.svg" alt="arrowr">
+                    </div>
+                </section>
             </div>
         </main>
         <footer class="footer">
