--- a/homework06/index.html
+++ b/homework06/index.html
@@ -119,9 +119,12 @@
 
                     </div>
                     <div class="controls">
-                        <img src="../homework06/img/slide.svg" alt="slide">
-                        <img class="arrow_control" src="../homework06/img/arrowl.svg" alt="arrowl">
-                        <img src="../homework06/img/arrowr2.svg" alt="arrowr">
+                        <a href=""><img src="../homework06/img/slide.svg" alt="slide"></a>
+                        <div class="arrows">
+                            <a href="#"><img class="arrow_control" src="../homework06/img/arrowl.svg" alt="arrowl"></a>
+                            <a href="#"><img src="../homework06/img/arrowr2.svg" alt="arrowr"></a>
+                        </div>
+
                     </div>
                 </section>
             </div>
