--- a/homework06/index.html
+++ b/homework06/index.html
@@ -122,7 +122,7 @@
                         <a href=""><img src="../homework06/img/slide.svg" alt="slide"></a>
                         <div class="arrows">
                             <a href="#"><img class="arrow_control" src="../homework06/img/arrowl.svg" alt="arrowl"></a>
-                            <a href="#"><img src="../homework06/img/arrowr2.svg" alt="arrowr"></a>
+                            <a href="#"><img class="arrowr2" src="../homework06/img/arrowr2.svg" alt="arrowr"></a>
                         </div>
 
                     </div>
