--- a/homework06/index.html
+++ b/homework06/index.html
@@ -111,7 +111,7 @@
                         <img src="../homework06/img/Ellipse 76.png" alt="photo">
                         <div class="text_testimols">
                             <h4>John Fang </h4>
-                            <a href="wordfaang.com">wordfaang.com</a>
+                            <a href="http://wordfaang.com">wordfaang.com</a>
                             <p>Suspendisse ultrices at diam lectus nullam.
                                 Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar aenean nam
                                 laoreet nulla.</p>
