--- a/homework06/index.html
+++ b/homework06/index.html
@@ -130,7 +130,19 @@
             </div>
         </main>
         <footer class="footer">
-            <div class="container">3</div>
+            <div class="container">
+                <div class="try">
+                    <div class="text">
+                        <h1>Try for free!</h1>
+                        <p>Get limited 1 week free try our features!</p>
+                    </div>
+                    <div class="buttons">
+                        <a href=""></a>
+                    </div>
+                </div>
+                <div class="data"></div>
+                <div class="copyright"></div>
+            </div>
         </footer>
     </div>
 </body>
