--- a/homework06/index.html
+++ b/homework06/index.html
@@ -132,16 +132,62 @@
         <footer class="footer">
             <div class="container">
                 <div class="try">
-                    <div class="text">
-                        <h1>Try for free!</h1>
+                    <div class="text_try">
+                        <h3>Try for free!</h3>
                         <p>Get limited 1 week free try our features!</p>
                     </div>
                     <div class="buttons">
-                        <a href=""></a>
+                        <a href="#" class="learn">Learn more</a>
+                        <a href="#" class="request">Request Demo <img class="arrowr" src="../homework06/img/arrowr.svg"
+                                alt="#"></a>
                     </div>
                 </div>
-                <div class="data"></div>
-                <div class="copyright"></div>
+                <div class="data">
+                    <div class="warehouse_data">
+                        <div class="warehouse_data_head">
+                            <img src="../homework06/img/Logo.svg" alt="logo">
+                            <h4 id="head_data">DataWarehouse</h4>
+
+                        </div>
+                        <div class="warehouse_text">Warehouse Society, 234 <br>
+                            Bahagia Ave Street
+                            PRBW 29281
+                        </div>
+                        <div class="info_text">info@warehouse.project
+                            1-232-3434 (Main)</div>
+                    </div>
+                    <div class="about_data">
+                        <h4>About</h4>
+                        <ul>
+                            <li><a href="">Profile</a></li>
+                            <li><a href="">Features</a></li>
+                            <li><a href="">Careers</a></li>
+                            <li><a href="">DW News</a></li>
+                        </ul>
+                    </div>
+                    <div class="help_data">
+                        <h4>Help</h4>
+                        <ul>
+                            <li><a href="#">Support</a></li>
+                            <li><a href="">Sign up</a></li>
+                            <li><a href="">Guide</a></li>
+                            <li><a href="">Reports</a> </li>
+                            <li><a href="">Q&A</a> </li>
+                        </ul>
+                    </div>
+                    <div class="social_data">
+                        <h4>Social Media</h4>
+                        <a href=""><img src="../homework06/img/SM.svg" alt="social"></a>
+                    </div>
+                </div>
+                <div class="copyright">
+                    <div class="copyright_text">
+                        <div>© Datawarehouse™, 2020. All rights reserved.
+                            Company Registration Number: 21479524.</div>
+                        <a href="#"><img src="../homework06/img/Group 64.svg" alt="chat"></a>
+                    </div>
+
+                </div>
             </div>
         </footer>
     </div>
