--- a/homework06/index.html
+++ b/homework06/index.html
@@ -22,8 +22,14 @@
                         <li><a href="">Signup</a></li>
                     </ul>
 
-                    <a href="#" class="request">Request Demo <img class="arrowr" src="../homework06/img/arrowr.svg"
-                            alt="#"></a>
+                    <a href="#" class="request">Request Demo <svg xmlns="http://www.w3.org/2000/svg" width="22"
+                            height="16" viewBox="0 0 22 16" fill="none">
+                            <path d="M15 15L21 8L15 1" stroke="#9C69E2" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M21 8H1" stroke="#9C69E2" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg>
+                    </a>
                 </nav>
                 <div class="text_header">
                     <h1>Save your data storage here.</h1>
