--- a/homework07/index.html
+++ b/homework07/index.html
@@ -52,7 +52,14 @@
                 </div>
             </div>
         </header>
-        <main class="main">2</main>
+        <main class="main">
+            <section>
+                <div class="container">
+
+                </div>
+            </section>
+
+        </main>
         <footer class="footer">3</footer>
     </div>
 </body>
