--- a/homework07/index.html
+++ b/homework07/index.html
@@ -15,6 +15,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rochester&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -22,7 +25,7 @@
         <header class="header">
             <div class="container">
                 <div class="header_container">
-                    <a href="" class="logo"><img src="../homework07/img/icons/logo.png" alt="logo"></a>
+                    <a href="" class="logo">Lady shop</a>
                     <div class="social_header">
                         <a href=""><img src="../homework07/img/icons/twitter_icn_1.svg" alt="twitter"></a>
                         <a href=""><img src="../homework07/img/icons/instagram_icn _1.svg" alt="insta"></a>
