add 2 section grid

--- a/homework07/index.html
+++ b/homework07/index.html
@@ -61,7 +61,35 @@
                     </div>
                 </div>
             </section>
-
+            <section>
+                <div class="container">
+                    <div class="colection">
+                        <div class="colection_item1">
+                            <h3>Women Collection</h3>
+                            <p>Spring 2022</p>
+                            <a href="">Popular</a>
+                        </div>
+                        <div class="colection_item2">
+                            <h3>Women Collection</h3>
+                            <p>Spring 2022</p>
+                        </div>
+                        <div class="colection_item3">
+                            <p>New</p>
+                            <h3>Dresses</h3>
+                        </div>
+                        <div class="colection_item4">
+                            <p>New</p>
+                            <h3>Denim Jackets</h3>
+                        </div>
+                        <div class="colection_item5">
+                            <div class=""></div>
+                            <div class=""></div>
+                            <div class=""></div>
+                            <div class=""></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">3</footer>
     </div>
