--- a/homework07/index.html
+++ b/homework07/index.html
@@ -82,10 +82,83 @@
                             <h3>Denim Jackets</h3>
                         </div>
                         <div class="colection_item5">
-                            <div class=""></div>
-                            <div class=""></div>
-                            <div class=""></div>
-                            <div class=""></div>
+                            <div class="col col1">
+                                <img src="../homework07/img/pictures/lv.png" width="156px" height="127px" alt="lv">
+                                <p>Louis Vouiton</p>
+                            </div>
+                            <div class="col col2">
+                                <img src="../homework07/img/pictures/dg.png" width="100px" height="138px" alt="dg">
+                                <p>Dolce&Gabbana</p>
+                            </div>
+                            <div class="col col3">
+                                <img src="../homework07/img/pictures/g.png" width="156px" height="92px" alt="g">
+                                <p>Gucci</p>
+                            </div>
+                            <div class="col col4">
+                                <img src="../homework07/img/pictures/dn.png" width="94px" height="132px" alt="dn">
+                                <p>Dries van Noten</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="like">
+                <div class="container">
+                    <h2>You may like</h2>
+                    <div class="like_items">
+                        <div class="like_item">
+                            <img src="../homework07/img/pictures/Mask Group.png" alt="girl">
+                            <h4>Women's black vest Gucci</h4>
+                            <p>This is a wonderful black vest, which is well suited for parties and also great…</p>
+                            <div class="shop">
+                                <div class="price">$ 715</div>
+                                <button type="button">Shop now</button>
+                            </div>
+                        </div>
+                        <div class="like_item">
+                            <img src="../homework07/img/pictures/Mask Group2.png" alt="girl">
+                            <h4>Women's black vest Gucci</h4>
+                            <p>This is a wonderful black vest, which is well suited for parties and also great…</p>
+                            <div class="shop">
+                                <div class="price">$ 715</div>
+                                <button type="button">Shop now</button>
+                            </div>
+                        </div>
+                        <div class="like_item">
+                            <img src="../homework07/img/pictures/Mask Group3.png" alt="girl">
+                            <h4>Women's black vest Gucci</h4>
+                            <p>This is a wonderful black vest, which is well suited for parties and also great…</p>
+                            <div class="shop">
+                                <div class="price">$ 715</div>
+                                <button type="button">Shop now</button>
+                            </div>
+                        </div>
+                        <div class="like_item">
+                            <img src="../homework07/img/pictures/Mask Group.png" alt="girl">
+                            <h4>Women's black vest Gucci</h4>
+                            <p>This is a wonderful black vest, which is well suited for parties and also great…</p>
+                            <div class="shop">
+                                <div class="price">$ 715</div>
+                                <button type="button">Shop now</button>
+                            </div>
+                        </div>
+                        <div class="like_item">
+                            <img src="../homework07/img/pictures/Mask Group2.png" alt="girl">
+                            <h4>Women's black vest Gucci</h4>
+                            <p>This is a wonderful black vest, which is well suited for parties and also great…</p>
+                            <div class="shop">
+                                <div class="price">$ 715</div>
+                                <button type="button">Shop now</button>
+                            </div>
+                        </div>
+                        <div class="like_item">
+                            <img src="../homework07/img/pictures/Mask Group3.png" alt="girl">
+                            <h4>Women's black vest Gucci</h4>
+                            <p>This is a wonderful black vest, which is well suited for parties and also great…</p>
+                            <div class="shop">
+                                <div class="price">$ 715</div>
+                                <button type="button">Shop now</button>
+                            </div>
                         </div>
                     </div>
                 </div>
